# Efficent_Frontier

./: .gitignore  CLI.txt  README.md  TODO.md  process_input_data.py  pyproject.toml  run_cli.py  run_interactive.py  setup.py
data/input/excel/: W4E1PrepData.xlsx
efficient_frontier/: __init__.py
efficient_frontier/cli/: __init__.py  interactive.py  main.py
efficient_frontier/core/: __init__.py  loader.py  optimizer.py
efficient_frontier/visualization/: __init__.py  plots.py
examples/: example_hw3_six_stocks.py  example_week4_dj_stocks.py  homework_assistant.py
