[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efficient-frontier"
version = "1.0.0"
description = "Modern Portfolio Theory implementation for portfolio optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "openpyxl>=3.0",
]

[project.optional-dependencies]
pdf = ["PyMuPDF>=1.20"]
dev = ["pytest>=7.0", "black", "flake8"]

[project.scripts]
ef-analyze = "efficient_frontier.cli.main:main"
ef-interactive = "efficient_frontier.cli.interactive:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["efficient_frontier*"]

[tool.setuptools.package-data]
"efficient_frontier" = ["py.typed"]
"*" = ["*.xlsx", "*.csv"]
